# safeverbs

./: .gitmodules  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  todo.txt
.devcontainer/: Dockerfile
demo/high-performance/: README.md
demo/memory-safe/: showcase1.c  showcase1.rs
demo/user-friendly/: builder_pattern.rs  datapath.c  datapath.rs  full_flexibility_typestate_pattern.rs  rc_pingpong.c
examples/greeter/: Cargo.toml
examples/greeter/src/: client.rs  config.rs  server.rs
examples/perftest/: Cargo.toml
examples/perftest/src/: cli.rs  lib.rs  write_bw.rs
examples/uchan/: Cargo.toml
examples/uchan/src/: main.rs
src/: interval_tree.rs  lib.rs  safeverbs.rs
