[package]
name = "safeverbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibverbs = { path = "rust-ibverbs/ibverbs" }
ibverbs-sys = { path = "rust-ibverbs/ibverbs-sys" }
serde = { version = "1.0.215", features = ["derive"], optional = true }
zerocopy = { version = "0.8.10", features = ["derive"] }

[features]
serde = ["dep:serde"]
