[package]
name = "greeter"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
futures = "0.3.31"
safeverbs = { workspace = true, features = ["serde"] }
serde.workspace = true

[[bin]]
name = "greeter_client"
path = "src/client.rs"

[[bin]]
name = "greeter_server"
path = "src/server.rs"
