[package]
name = "perftest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
bincode = "1.3.3"
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3.31"
minstant = "0.1.7"
safeverbs = { workspace = true, features = ["serde"] }
serde.workspace = true

[[bin]]
name = "safeverbs_write_bw"
path = "src/write_bw.rs"